# iqstars

./: README.md  pyproject.toml
iqstars/: __main__.py  app.py  board.py  main.py
pyqstars/: __main__.py  app.py  board.py  hexlib.py  shapes.py
pyqstars/core/: board.py  hex.py  hexagons.py  hexlib.py  objects.py  piece.py  shape.py  shapes.py
