[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "iqstars"
version = "0.0.0"
description = "App to play IQ Stars."
authors = ["Martin Neufeld <m.neufeld946@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
rotdis = "iqstars.main:main"

[tool.poetry-dynamic-versioning]
enable = true
